Fix on firefox

--- a/_sass/application.scss
+++ b/_sass/application.scss
@@ -148,7 +148,7 @@ body {
   overflow: auto;
 
   width: 400px;
-  height: 100px;
+  height: 102px;
   margin: 10px 0;
   border: 1px solid #aaa;
   @include box-shadow(#aaa 2px 2px 2px);
